--- a/resources/metadata/abapAddonAssemblyKitReserveNextPackages.yaml
+++ b/resources/metadata/abapAddonAssemblyKitReserveNextPackages.yaml
@@ -38,9 +38,9 @@ spec:
         - STEPS
         mandatory: true
         secret: true
-      - name: repositories
+      - name: addonDescriptor
         type: string
-        description: repositories
+        description: AddonDescriptor
         mandatory: true
         scope:
           - PARAMETERS
@@ -48,10 +48,10 @@ spec:
           - STEPS
         resourceRef:
           - name: commonPipelineEnvironment
-            param: abap/repositories
+            param: abap/addonDescriptor
   outputs:
     resources:
       - name: commonPipelineEnvironment
         type: piperEnvironment
         params:
-          - name: abap/repositories
+          - name: abap/addonDescriptor
