--- a/resources/metadata/abapAddonAssemblyKitCheckCVs.yaml
+++ b/resources/metadata/abapAddonAssemblyKitCheckCVs.yaml
@@ -43,6 +43,17 @@ spec:
         description: File name of the YAML descriptor
         mandatory: true
         default: .pipeline/addon.yml
+      - name: addonDescriptor
+        type: string
+        description: AddonDescriptor
+        mandatory: false
+        scope:
+          - PARAMETERS
+          - STAGES
+          - STEPS
+        resourceRef:
+          - name: commonPipelineEnvironment
+            param: abap/addonDescriptor
   outputs:
     resources:
       - name: commonPipelineEnvironment
