--- a/resources/metadata/abapEnvironmentAssemblePackages.yaml
+++ b/resources/metadata/abapEnvironmentAssemblePackages.yaml
@@ -93,9 +93,9 @@ spec:
         - STEPS
         mandatory: true
         secret: true
-      - name: repositories
+      - name: addonDescriptor
         type: string
-        description: repositories
+        description: AddonDescriptor
         mandatory: true
         scope:
           - PARAMETERS
@@ -103,7 +103,7 @@ spec:
           - STEPS
         resourceRef:
           - name: commonPipelineEnvironment
-            param: abap/repositories
+            param: abap/addonDescriptor
       - name: maxRuntimeInMinutes
         type: int
         description: maximal runtime of the step
@@ -118,7 +118,7 @@ spec:
       - name: commonPipelineEnvironment
         type: piperEnvironment
         params:
-          - name: abap/repositories
+          - name: abap/addonDescriptor
   containers:
     - name: cf
       image: ppiper/cf-cli
