--- a/.gitignore
+++ b/.gitignore
@@ -29,5 +29,5 @@ debug.test
 /cache/protecode
 
 *errorDetails.json
-cmd/protecodeExecuteScan_links.json
-cmd/protecodeExecuteScan_reports.json
+*_links.json
+*_reports.json
