Result displaying changes and checkvariant extension added

--- a/resources/metadata/abapEnvironmentRunATCCheck.yaml
+++ b/resources/metadata/abapEnvironmentRunATCCheck.yaml
@@ -109,6 +109,15 @@ spec:
         - STEPS
         - GENERAL
         mandatory: false
+      - name: atcResultsFileName
+        type: string
+        description: Specifies output file name for the results from the ATC run
+        scope:
+        - PARAMETERS
+        - STAGES
+        - STEPS
+        mandatory: false
+        default: 'ATCResults.xml'
   containers:
     - name: cf
       image: ppiper/cf-cli
