Add npmScript existence as step condition

--- a/resources/com.sap.piper/pipeline/cloudSdkStageDefaults.yml
+++ b/resources/com.sap.piper/pipeline/cloudSdkStageDefaults.yml
@@ -52,3 +52,7 @@ stages:
           - 'runScripts'
       mavenExecuteIntegration:
         filePattern: 'integration-tests/pom.xml'
+  frontendIntegrationTests:
+    stepConditions:
+      npmExecuteScripts:
+        npmScript: 'ci-it-frontend'
