fixed error handling

--- a/resources/metadata/abapEnvironmentAssemblePackages.yaml
+++ b/resources/metadata/abapEnvironmentAssemblePackages.yaml
@@ -1,8 +1,7 @@
 metadata:
     name: abapEnvironmentAssemblePackages
     description: Assembly of installation, support package or patch in SAP Cloud Platform ABAP Environment system
-    longDescription: |
-      Assembly of of a list of installations, support packages or patches in SAP Cloud Platform ABAP Environment system      
+    longDescription: Assembly of of a list of installations, support packages or patches in SAP Cloud Platform ABAP Environment system      
 spec:
   inputs:
     secrets:
