Shuffle code around
* npm.Executor is used to install dependencies if necessary
* npm scans each module (not only in scanType=mta case)
* earlier yarn-based implementation is available via scanType=yarn

--- a/resources/metadata/whitesource.yaml
+++ b/resources/metadata/whitesource.yaml
@@ -269,7 +269,7 @@ spec:
         - PARAMETERS
         - STAGES
         - STEPS
-      possibleValues: ["golang", "gradle", "maven", "mta", "npm", "pip"]
+      possibleValues: ["golang", "gradle", "maven", "mta", "npm", "pip", "yarn"]
     - name: cvssSeverityLimit
       type: string
       description: "Limit of tolerable CVSS v3 score upon assessment and in consequence fails the build,
