link credentialId to parameter

--- a/resources/metadata/xsDeploy.yaml
+++ b/resources/metadata/xsDeploy.yaml
@@ -97,6 +97,10 @@ spec:
         - STEPS
         secret: true
         mandatory: true
+        resourceRef:
+          - name: credentialsId
+            type: secret
+            param: username
       - name: password
         type: string
         description: Password
@@ -106,6 +110,10 @@ spec:
         - STEPS
         secret: true
         mandatory: true
+        resourceRef:
+          - name: credentialsId
+            type: secret
+            param: password
       - name: org
         type: string
         description: The org
