--- a/resources/metadata/protecode.yaml
+++ b/resources/metadata/protecode.yaml
@@ -155,6 +155,10 @@ spec:
         - STAGES
         - STEPS
       secret: true
+      resourceRef:
+        - name: protecodeCredentialsId
+          type: secret
+          param: username
     - name: password
       type: string
       description: Password which is used for the user
@@ -164,6 +168,10 @@ spec:
         - STAGES
         - STEPS
       secret: true
+      resourceRef:
+        - name: protecodeCredentialsId
+          type: secret
+          param: password
     - name: artifactVersion
       type: string
       description: The version of the artifact to allow identification in protecode backend
