--- a/resources/metadata/githubrelease.yaml
+++ b/resources/metadata/githubrelease.yaml
@@ -141,6 +141,9 @@ spec:
         type: string
         mandatory: true
         secret: true
+        resourceRef:
+          - name: githubTokenCredentialsId
+            type: secret
       - name: uploadUrl
         aliases:
           - name: githubUploadUrl
