--- a/resources/metadata/gctsDeployCommit.yaml
+++ b/resources/metadata/gctsDeployCommit.yaml
@@ -20,6 +20,10 @@ spec:
         - STEPS
         mandatory: true
         secret: true
+        resourceRef:
+          - name: abapCredentialsId
+            type: secret
+            param: username
       - name: password
         type: string
         description: Password to authenticate to the ABAP system
@@ -29,6 +33,10 @@ spec:
         - STEPS
         mandatory: true
         secret: true
+        resourceRef:
+          - name: abapCredentialsId
+            type: secret
+            param: password
       - name: repository
         type: string
         description: Specifies the name (ID) of the local repsitory on the ABAP system
